envoy/02-gateway-namespace/manifests/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
#   parametersRef:
#     group: gateway.envoyproxy.io
#     kind: EnvoyProxy
#     name: clusterip-config
#     namespace: envoy-gateway-system
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: EnvoyProxy
# metadata:
#   name: clusterip-config
#   namespace: envoy-gateway-system
# spec:
#   provider:
#     type: Kubernetes
#     kubernetes:
#       envoyService:
#         type: ClusterIP
