envoy/02-gateway-namespace/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-different-name
spec:
  selector:
    app: podinfo
  ports:
  - port: 9898
    targetPort: 9898
